# aptos-core

./: Cargo.toml  package-lock.json
api/src/: transactions.rs
api/src/tests/: multisig_transactions_test.rs
api/types/src/: convert.rs
aptos-move/aptos-vm/src/: aptos_vm.rs
aptos-move/block-executor/src/: executor.rs
aptos-move/framework/aptos-framework/sources/: chunky_dkg.move  stake.move
config/src/config/: consensus_config.rs  network_config.rs
consensus/consensus-types/src/: block.rs  block_data.rs  common.rs  proxy_block_data.rs  proxy_messages.rs  proxy_sync_info.rs
consensus/proxy_primary/: Cargo.toml
consensus/proxy_primary/design/: architecture.md  implementation.md  protocol.md
consensus/proxy_primary/src/: lib.rs  primary_integration.rs  proxy_block_store.rs  proxy_error.rs  proxy_leader_election.rs  proxy_metrics.rs  proxy_network_sender.rs  proxy_proposal_generator.rs  proxy_round_manager.rs  proxy_safety_rules.rs
consensus/src/: epoch_manager.rs  network.rs  network_interface.rs  round_manager.rs  round_manager_fuzzing.rs
consensus/src/payload_manager/: quorum_store_payload_manager.rs
consensus/src/pipeline/: decryption_pipeline_builder.rs  pipeline_builder.rs
consensus/src/rand/rand_gen/: types.rs
consensus/src/round_manager_tests/: mod.rs
crates/aptos/e2e/cases/: move.py
crates/aptos/src/common/: types.rs
crates/aptos/src/move_tool/: mod.rs
network/builder/src/: builder.rs
network/framework/src/peer_manager/: builder.rs  mod.rs  tests.rs
testsuite/testcases/src/: proxy_primary_test.rs
types/src/transaction/: mod.rs
(+5 files in other folders)
