[package]
name = "aptos-proxy-primary"
description = "Aptos proxy primary consensus"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-channels = { workspace = true }
aptos-config = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-infallible = { workspace = true }
aptos-logger = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-network = { workspace = true }
aptos-safety-rules = { workspace = true }
aptos-secure-storage = { workspace = true }
aptos-time-service = { workspace = true }
aptos-types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
aptos-config = { workspace = true, features = ["fuzzing"] }
aptos-consensus-types = { workspace = true, features = ["fuzzing"] }
claims = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
fuzzing = ["aptos-consensus-types/fuzzing", "aptos-config/fuzzing"]
testing = ["aptos-secure-storage/testing"]
